--- a/css/design.css
+++ b/css/design.css
@@ -149,6 +149,10 @@ hr {
     color: #55acee;
 }
 
+.social-links .facebook-link:hover {
+    color: #55acee;
+}
+
 .social-links .email-link:hover {
     color: #dd4b39;
 }
@@ -447,6 +451,10 @@ contact-button:after {
     color: #55acee;
 }
 
+.facebook-social {
+    color: #55acee;
+}
+
 .linkedin-social {
     color: #007bb5;
 }
@@ -487,6 +495,12 @@ contact-button:after {
 
 .contact-buttons>a.twitter-social:hover,
 .contact-buttons>a.twitter-social:focus {
+    color: white;
+    background-color: #55acee;
+}
+
+.contact-buttons>a.facebook-social:hover,
+.contact-buttons>a.facebook-social:focus {
     color: white;
     background-color: #55acee;
 }
